--- a/proposal/signatories.qmd
+++ b/proposal/signatories.qmd
@@ -6,17 +6,22 @@ An optional section would be for R-Core signatories where changes to R are propo
 -->
 
 ## Project team
-<!-- 
-Who are the people responsible for actually delivering the project if the proposal gets accepted and are already signed up and rearing to go?
--->
+
+- Philipp Baumann
+- Justin Bedő
+- László Kupcsik
+- Bruno Rodrigues
 
 ## Contributors
-<!-- 
-Who are the people who have actively helped with this proposal but won't necessarily be on the core project team later?
--->
+
+- Philipp Baumann
+- Justin Bedő
+- László Kupcsik
+- Bruno Rodrigues
+
 
 ## Consulted
-<!-- 
-Who has been given the opportunity to provide feedback on the proposal? This should include any R Consortium & ISC members who the proposal has been discussed with.
--->
+- Amanda L. Martin
+- Josiah Parry
+
 
